Remove redundant createIcebergQueryRunner overloads