@@ -13,7 +13,6 @@
  */
 package io.trino.plugin.iceberg;
 
-import com.google.common.collect.ImmutableMap;
 import io.trino.sql.planner.OptimizerConfig.JoinDistributionType;
 import io.trino.testing.BaseDynamicPartitionPruningTest;
 import io.trino.testing.QueryRunner;
@@ -21,6 +20,7 @@ import org.intellij.lang.annotations.Language;
 import org.testng.SkipException;
 
 import java.util.List;
+import java.util.Map;
 
 import static java.lang.String.format;
 import static java.util.stream.Collectors.joining;
@@ -32,10 +32,11 @@ public class TestIcebergDynamicPartitionPruningTest
     protected QueryRunner createQueryRunner()
             throws Exception
     {
-        return IcebergQueryRunner.createIcebergQueryRunner(
-                EXTRA_PROPERTIES,
-                ImmutableMap.of("iceberg.dynamic-filtering.wait-timeout", "1h"),
-                REQUIRED_TABLES);
+        return IcebergQueryRunner.builder()
+                .setExtraProperties(EXTRA_PROPERTIES)
+                .setIcebergProperties(Map.of("iceberg.dynamic-filtering.wait-timeout", "1h"))
+                .setInitialTables(REQUIRED_TABLES)
+                .build();
     }
 
     @Override
